--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <script src="mhi.github.io/flutter_library/v3/flutter_bootstrap.js" async></script>
+  <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
