--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <link rel="icon" type="image/png" href="favicon.png" />
 
   <title>example</title>
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="flutter_v3_library_demo/manifest.json">
 </head>
 
 <body>
