--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>example</title>
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="flutter_v3_library_demo/manifest.json">
 
   <!-- cropperjs -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.2/cropper.css" />
@@ -41,6 +41,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/croppie/2.6.5/croppie.min.js"></script>
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+  <script src="flutter_v3_library_demo/flutter_bootstrap.js" async></script>
 </body>
 </html>
